syntax = "proto3";

package tours;
option csharp_namespace = "Tours.Api";

// ===== Messages =====
message AbandonTourExecutionRequest {
  int64 tourExecutionId = 1;
  double latitude = 2;
  double longitude = 3;
}

message CompleteTourExecutionRequest {
  int64 tourExecutionId = 1;
  double latitude = 2;
  double longitude = 3;
}

message CompletedCheckpointResponse {
  int64 checkpointId = 1;
  int64 completionTime = 2;
}

message TourExecutionResponse {
  int64 id = 1;
  int64 tourId = 2;
  int64 touristId = 3;
  string status = 4;
  int64 lastActivity = 5;
  double completion = 6;
  double longitude = 7;
  double latitude = 8;
  repeated CompletedCheckpointResponse completedCheckpoints = 9;
}

// ===== Service =====
service TourExecutionService {
  rpc AbandonTourExecution(AbandonTourExecutionRequest) returns (TourExecutionResponse);
  rpc CompleteTourExecution(CompleteTourExecutionRequest) returns (TourExecutionResponse);
}
